k8s/local-k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lop-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
      paths:
      - path: /lobby(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: lobby-server-service
            port: 
              number: 80
      - path: /matchmaking(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: matchmaking-server-service
            port: 
              number: 80
      - path: /room(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: room-server-service
            port: 
              number: 80
